<resources>
    <string name="app_name">PDF Viewer Lite</string>
    <string name="quit">Quit Application</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_title_permision_denied">Permission Denied</string>
    <string name="dialog_body_permission_denied">Without those permission the application is unable to read your documents. Do you want us to retry for permissions? \n\nApplication will quit without this permission.</string>
    <string name="error_grant_access_through_settings">You denied permission to the app permanently. We can\'t access your documents from storage.\n\nKindly grant the permissions from Apps section available in the settings.</string>
    <string name="remind_later">"Remind Later"</string>
    <string name="rating_text">If you like our application, Please rate our application in play store.\n\nThank you for your support\nAVR Apps</string>
    <string name="dialog_button_no">Don\'t show again.</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="dismiss">Dismiss</string>
    <string name="enter_password">Enter password</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="not_supported">Not supported</string>
    <string name="okay">Okay</string>
    <string name="search">Search&#x2026;</string>
    <string name="searching_">Searching&#x2026;</string>
    <string name="text_not_found">Text not found</string>
    <string name="share_message">File Shared with you</string>
    <string name="share_subject">Sharing file…</string>
    <string name="no_file_chooser">No File chooser available to pick document. Choose file using inbuilt browser</string>
    <string name="error_no_playstore">Play Store Not Installed</string>
    <string name="error_no_browser">No browser find to send us feedback</string>
    <string name="error_no_apptoshare">Could not find any app to share.</string>
    <string name="toc">Table of Contents</string>
    <string name="vertical_swipe">Vertical</string>
    <string name="horizontal_swipe">Horizontal</string>
    <string name="pdf_reader_page_swipe_direction">PDF Reader Page Swipe Direction</string>
    <string name="select_theme">Select App Theme</string>
    <string name="notebook_background">PDF Page background</string>
    <string name="storage_internal">Internal Storage</string>
    <string name="storage_sd_card">SD card</string>
    <string name="root_directory">Root</string>
    <string name="pick_filse_desc">Open Android File Picker to open documents form Google Drive, Photos, Other Apps etc…</string>
    <string name="pick_file">Pick File</string>
    <string name="no_recent_files">No recently opened files. Pick a file to view</string>
    <string name="cant_load_file">Could not load file. We request you for the logs. Please email error report to us to fix the issue</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="show_hidden_files">Hidden Files</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="document_details">Document Details</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="encryption">Encryption</string>
    <string name="formt">Format</string>
    <string name="page_count">Page Count</string>
    <string name="file_Size">File Size</string>
    <string name="navigation_help">Navigation Help</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="no_faviorites">No favorites added. PLease make one after opening the file</string>
    <string name="mark_favorite">Mark as Favorite</string>
    <string name="unmark_favorite">Remove Favorite</string>
    <string name="shortcuts_title">PDF Viewer Shortcuts</string>
    <string name="shortcuts_description"><![CDATA[Double Tap   ->  Zoom In/out 2x\nSingle Tap   ->  Show/Hide Scrollbar\nPinch in/out ->  Zoom in/out 25x\nLong Tap     ->  Text Selection Options]]></string>
    <string name="ok">Okay</string>
    <string name="pdf_info">PDF Information</string>
    <string name="copy">Copy</string>
    <string name="open_files">Open Files</string>
    <string name="settings">Settings</string>
    <string name="no_supported_files_in_the_folder">No supported files in the folder</string>
    <string name="browse_files">Browse Files</string>
    <string name="annotation_not_supported">Annotation not supported</string>
    <string name="open">OPEN</string>
    <string name="title_select_storage">Choose Storage</string>
    <string name="title_select_files">Select Files</string>
    <string name="other_files">Other Selected FIles</string>
    <string name="type_your_reply">Type your Comment</string>
    <string name="reply">Comment</string>
    <string name="pdf_author_title">Author Name for PDF Annotations</string>
    <string name="dark_theme">Dark Theme for App</string>
    <string name="grand_access_to_sdcard">Grand Access to SDCARD</string>
    <string name="pref_ann_author_title">Author for PDF Annotations</string>
    <string name="pref_ann_author_body">Please input the author name for PDF Annotations</string>
    <string name="pref_ann_author_positive_button">Set Author</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="pref_saf_access_title">Access SDCARD</string>
    <string name="pref_saf_access_details">PDF files in the removable storage are not editable unless the Storage access is granted. Please select SDCARD from menu and provide access, which is one time process. \nDo you want to grant access now?</string>
    <string name="tab_head_settings">Settings</string>
    <string name="pref_perm_discription">Grant us permission to write to removable SD Cards/OTG\'s, if you want to annotate or fill forms from the storage.</string>
    <string name="pdf_not_editable">Doc is not editable</string>
    <string name="keep_screen_on">Keep Screen On while using the App</string>
    <string name="no_auto_import_setting_desc">When the PDFs are opened from other apps or opened using file picker, we import files to PDFViewer folder in your storage to show in recent files(Note: Files will not be copied if you browse files from the app or if you open from library). Enabling this will turn off this feature and files opened from other apps will not be displayed in recent list. </string>
    <string name="clear_all_imported_files">Clear all imported files</string>
    <string name="do_not_auto_import_files">Do not Auto Import files</string>
    <string name="annotations_at_the_location">Annotations at the Location</string>
    <string name="pro">Pro</string>
    <string name="choose_file">ChooseFile</string>
    <string name="_selected">%d Selected</string>
    <string name="modified_">Modified : </string>
    <string name="done">Done</string>
    <string name="moments_Ago">Moments ago</string>
    <string name="minute_ago">A minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hour_ago">An hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">%d days ago</string>
    <string name="selected"> Selected</string>
    <string name="recent_files">Recent Files</string>
    <string name="favorites">Your Favorites</string>
    <string name="pdf_library">PDF Library</string>
    <string name="epub_library">EPUB Library</string>
    <string name="tiff_library">TIFF Library</string>
    <string name="xps_library">XPS/CBZ/FB2 Library</string>
    <string name="recent_title">Recent</string>
    <string name="favorite_title">Favorite</string>
    <string name="browse_title">Browse</string>
    <string name="pdf_library_title">PDF Library</string>
    <string name="epub_library_title">EPUB</string>
    <string name="tiff_library_title">TIFF</string>
    <string name="xps_library_title">XPS/CBZ/FB2</string>
    <string name="incorrct_path">Incorrect path Chosen</string>
    <string name="select_proper_path_desc"><![CDATA[Please select root folder of SDCARD %s.\nWith out this permission you can\'t add edit PDF & annotations/form filling will not work]]></string>
    <string name="dont_Show_again">Do not show again</string>
    <string name="waring">Warning</string>
    <string name="dont_show_again_description"><![CDATA[We will not show you this dialog again. Since we don\'t have access to the folder you can\'t edit PDF. Annotations & form filling will be disabled for the files from SDCard.\n\nHowever if you choose to grant access, you can grant access from settings]]></string>
    <string name="open_readonly">PDF opened as read only</string>
    <string name="close">Close</string>
    <string name="buy">Buy</string>
    <string name="buy_pro"> Buy Pro </string>
    <string name="buy_pro_description"> <![CDATA[ Thanks for being an active user of PDF Viewer. PDF Viewer is also available in pro version. Do you want to give it a try? Benefits of Pro version \n\u25CF Dark Theme can be enabled \n\u25CF Sign PDF Documents with your Name \n\u25CF Unlimited access to PDF Tools with out ads and many more coming soon ]]></string>
    <string name="want_to_grant_Access">PDF files in the removable storage are not editable unless the Storage access is granted. You need to select the SDCard from side nav and provide access to SDCARD which is one time process. \nDo you want to grant access now?</string>
    <string name="enter_field_value">Enter Field Value</string>
    <string name="update_text">Update Text</string>
    <string name="text_copied">Text Copied</string>
    <string name="email_bug_subject">PDF Viewer Lite - App Error Report</string>
    <string name="send_Error">Send error report…</string>
    <string name="no_text_selected">No text selected</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="comment_title">Comment For Note</string>
    <string name="comment_description">Provide a comment for the note</string>
    <string name="add_note">Add Note</string>
    <string name="could_not_share">Could not start file share</string>
    <string name="check_out">Hey check out this interesting app. </string>
    <string name="tools">Tools</string>
    <string name="compress_pdf">Compress PDF</string>
    <string name="protect_pdf">Protect PDF</string>
    <string name="remove_password">Unlock PDF</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="reorder_pages">Reorder Pages</string>
    <string name="sign_pdf">Watermark PDF</string>
    <string name="split_pdf">Split PDF</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="extract_pages">PDF to Images</string>
    <string name="destination_folder_images">Your photos will be saved to : Phone Storage > %s</string>
    <string name="pick_files_desc">Pick files using Android File Picker from Drive,Photos, Other Apps…</string>
    <string name="delete">Delete</string>
    <string name="delete_pages">Delete Pages</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="donate_us_desc">Like our app? Help us a little by donating us</string>
    <string name="donate_us">Donate Us</string>
    <string name="rate_us_description">Encourage us by rating the app in Play Store</string>
    <string name="follow_us_description">Follow us and Stay Connected</string>
    <string name="report_issues_description">Contribute us by helping/reporting issues</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_log">Change Log</string>
    <string name="github_contribute">Github - Contribute for Project</string>
    <string name="report_bug">Report Bug over Email</string>
    <string name="report_translation">Report translation issues</string>
</resources>